--- a/WebApplication3/Views/DB/AddProduct.cshtml
+++ b/WebApplication3/Views/DB/AddProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductViewModel
 @{
     Layout = "_DashBoard";
 }
@@ -11,63 +11,70 @@
 
         <div>
             <form methode="Post" asp-action="AddProduct" class="row">
+                <div asp-validation-summary="All"></div>
                 <div class="mb-3">
-                    <label asp-for="Name" class="form-label">Product Name</label>
+                    <label asp-for="product.Name" class="form-label">Product Name</label>
                     <input type="text"
                            
                            
-                           asp-for="Name"
+                           asp-for="product.Name"
                            class="form-control"
                            placeholder="" />
+                    <span asp-validation-for="product.Name" class="text-danger"></span>
 
                 </div>
                 <div class="mb-3">
-                    <label asp-for="Description" class="form-label">Product Description</label>
+                    <label asp-for="product.Description" class="form-label">Product Description</label>
                     <textarea type="text"
-                              
-                              
-                              asp-for="Description"
+                              asp-for="product.Description"
                               class="form-control"
                               placeholder=""></textarea>
+                    <span asp-validation-for="product.Description" class="text-danger"></span>
+
                 </div>
                 <div class="mb-3 col-lg-6">
-                    <label asp-for="Quant" class="form-label">Product Quantity</label>
+                    <label asp-for="product.Quant" class="form-label">Product Quantity</label>
                     <input type="number"
-                           
-                           
-                           asp-for="Quant"
+                           asp-for="product.Quant"
                            class="form-control"
                            placeholder=""></input>
+                    <span asp-validation-for="product.Quant" class="text-danger"></span>
+
                 </div>
                 <div class="mb-3 col-lg-6">
-                    <label asp-for="Price" class="form-label">Product Price</label>
+                    <label asp-for="product.Price" class="form-label">Product Price</label>
                     <input type="number"
-                           
-                           
-                           asp-for="Price"
+                           asp-for="product.Price"
                            class="form-control"
                            placeholder=""></input>
+                    <span asp-validation-for="product.Price" class="text-danger"></span>
+
                 </div>
                 <div class="mb-3 col-lg-12 d-flex align-items-center mt-4">
                     <div class="form-check">
-                        <input asp-for="EnableSize" class="form-check-input" type="checkbox" value="true" id="" />
-                        <label asp-for="EnableSize" class="form-check-label" for=""> Enable Product Size </label>
+                        <input asp-for="product.EnableSize" class="form-check-input" type="checkbox" value="true" id="" />
+                        <label asp-for="product.EnableSize" class="form-check-label" for=""> Enable Product Size </label>
                     </div>
 
 
                 </div>
 
                 <div class="mb-3 col-lg-6">
-                    <label asp-for="CompanyId" class="form-label">company</label>
+                    <label asp-for="product.CompanyId" class="form-label">company</label>
                     <select class="form-select "
-                    asp-for="CompanyId"
+                    asp-for="product.CompanyId"
                             
                             >
                             
                         <option selected>Select one</option>
-                        <option value="1">nike</option>
-                        <option value="2">adidas</option>
+                        @foreach(var com in Model.companies)
+                        {
+                            <option value=@com.Id>@com.Name</option>
+                        }
+                       
                     </select>
+                    <span asp-validation-for="product.CompanyId" class="text-danger"></span>
+                    
                 </div>
 
                 <div class=" mb-3 col-lg-5 d-flex align-items-center mt-lg-4 ">
@@ -77,7 +84,7 @@
                 <div class="col-lg-12 d-flex justify-content-center  ">
 
                     <button type="submit" class="btn btn-primary">Submit</button>
-
+                   
                 </div>
             </form>
 
