--- a/WebApplication3/Views/_ViewImports.cshtml
+++ b/WebApplication3/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApplication3
 @using WebApplication3.Models
+@using WebApplication3.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
